chore: create a src folder to hold all our source files
configure expo to point to app root component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/index.js",
   "private": true,
   "scripts": {
     "start": "expo start",
